--- a/index.css
+++ b/index.css
@@ -761,7 +761,7 @@ textarea:focus{
         margin-bottom: 3rem;
     }
 
-    .portfolio-container{
+    .certificate-container{
         grid-template-columns: repeat(2, 1fr);
     }
 
